--- a/Honeydo/nbproject/project.properties
+++ b/Honeydo/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=citbyui.cit360.honeydo.controls.Honeydo
+main.class=citbyui.cit360.honeydo.controls.HoneyDo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
